--- a/hotelbilly-main/pom.xml
+++ b/hotelbilly-main/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>hotelbilly.main</artifactId>
+    <artifactId>hotelbilly-main</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -19,19 +19,19 @@
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>hotelbilly.file</artifactId>
+            <artifactId>hotelbilly-file</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>hotelbilly.common</artifactId>
+            <artifactId>hotelbilly-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>hotelbilly.transactions</artifactId>
+            <artifactId>hotelbilly-transactions</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
