--- a/hotelbilly-transactions/pom.xml
+++ b/hotelbilly-transactions/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>hotelbilly.transactions</artifactId>
+    <artifactId>hotelbilly-transactions</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>hotelbilly.common</artifactId>
+            <artifactId>hotelbilly-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
